--- a/src/main/resources/fxml/Dialog.fxml
+++ b/src/main/resources/fxml/Dialog.fxml
@@ -7,12 +7,12 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DialogController">
    <Button fx:id="close" layoutX="51.0" layoutY="227.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="507.0"
-           text="ЗАКРЫТЬ">
+           text="ЗАКРЫТЬ" onAction="#closeDialog">
       <font>
          <Font size="65.0"/>
       </font>
    </Button>
-   <Label fx:id="error" layoutX="51.0" layoutY="28.0" prefHeight="189.0" prefWidth="507.0" text="ОШИБКА ">
+   <Label fx:id="error" layoutX="51.0" layoutY="28.0" prefHeight="189.0" prefWidth="507.0" text="errors">
       <font>
          <Font size="48.0"/>
       </font>
