--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -1,46 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="615.0" prefWidth="600" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainWindowController">
-   <Button fx:id="prev" layoutX="14.0" layoutY="306.0" mnemonicParsing="false" prefHeight="86.0" prefWidth="284.0"
-           text="НАЗАД" onAction="#prevAudio">
+<AnchorPane prefHeight="615.0" prefWidth="600" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainWindowController">
+   <Button fx:id="prev" layoutX="14.0" layoutY="306.0" mnemonicParsing="false" onAction="#prevAudio" prefHeight="86.0" prefWidth="284.0" text="НАЗАД">
       <font>
-         <Font size="39.0"/>
+         <Font size="39.0" />
       </font>
    </Button>
-   <Button fx:id="next" layoutX="304.0" layoutY="306.0" mnemonicParsing="false" prefHeight="87.0" prefWidth="284.0"
-           text="ВПЕРЕД" onAction="#nextAudio">
+   <Button fx:id="next" layoutX="304.0" layoutY="306.0" mnemonicParsing="false" onAction="#nextAudio" prefHeight="87.0" prefWidth="284.0" text="ВПЕРЕД">
       <font>
-         <Font size="41.0"/>
+         <Font size="41.0" />
       </font>
    </Button>
-   <Button fx:id="pauseOrPlay" layoutX="14.0" layoutY="200.0" mnemonicParsing="false" prefHeight="99.0"
-           prefWidth="574.0" text="ПАУЗА" onAction="#pauseOrPlayClick">
+   <Button fx:id="pauseOrPlay" layoutX="14.0" layoutY="200.0" mnemonicParsing="false" onAction="#pauseOrPlayClick" prefHeight="99.0" prefWidth="574.0" text="ПАУЗА">
       <font>
-         <Font size="41.0"/>
+         <Font size="41.0" />
       </font>
    </Button>
-   <Slider fx:id="sound" layoutX="9.0" layoutY="146.0" prefHeight="51.0" prefWidth="574.0"/>
-   <Label fx:id="timer" contentDisplay="RIGHT" layoutX="45.0" layoutY="35.0" prefHeight="111.0" prefWidth="530.0"
-          textOverrun="LEADING_ELLIPSIS" text=" ">
+   <Slider fx:id="sound" blockIncrement="0.0" layoutX="9.0" layoutY="146.0" majorTickUnit="0.5" max="1.0" onMouseDragged="#setSliderSound" prefHeight="51.0" prefWidth="574.0" showTickMarks="true" value="0.7" />
+   <Label fx:id="timer" contentDisplay="RIGHT" layoutX="45.0" layoutY="35.0" prefHeight="111.0" prefWidth="530.0" text=" " textOverrun="LEADING_ELLIPSIS">
       <font>
-         <Font size="76.0"/>
+         <Font size="76.0" />
       </font>
    </Label>
-   <Button fx:id="saveTime" layoutX="14.0" layoutY="401.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="574.0"
-           text="ЗАПОМНИТЬ" onAction="#saveClick">
+   <Button fx:id="saveTime" layoutX="14.0" layoutY="401.0" mnemonicParsing="false" onAction="#saveClick" prefHeight="99.0" prefWidth="574.0" text="ЗАПОМНИТЬ">
       <font>
-         <Font size="44.0"/>
+         <Font size="44.0" />
       </font>
    </Button>
-   <Button fx:id="resumeFromMemory" layoutX="14.0" layoutY="506.0" mnemonicParsing="false" prefHeight="99.0"
-           prefWidth="574.0" text="ВОСПР. ИЗ ПАМЯТИ" onAction="#resumeFromSaveClick">
+   <Button fx:id="resumeFromMemory" layoutX="14.0" layoutY="506.0" mnemonicParsing="false" onAction="#resumeFromSaveClick" prefHeight="99.0" prefWidth="574.0" text="ВОСПР. ИЗ ПАМЯТИ">
       <font>
-         <Font size="44.0"/>
+         <Font size="44.0" />
       </font>
    </Button>
 </AnchorPane>
